# SVF

./: .gitignore  11.txt  CMakeLists.txt  outFile_ConvOp.txt  output_bias.txt
LeNet/: LeNetPrinting.py  LeNetTraining.py
ModelTesting/: testing.py
NNs/LeNet/: LeNet.py  LeNetPrinting.py  LeNetTraining.py  aa.py  analysis_layers_output.py  onnx_generator.py  onnx_rename.py  output.json
NNs/LeNet/save_model_original/: best_model.onnx
NNs/LeNet/save_model_original_MaxPool2d/: best_model_MaxPool2d.onnx  best_model_MaxPool2d.pth
NNs/ModelTesting/: csv_testing.py
NNs/SmallNet/CNN/MaxPool/: CNN_MaxP.py  CNN_MaxP_Training.py
NNs/SmallNet/CNN/MaxPool/save_model_CNN_MaxP/: best_model_CNN_MaxP.onnx  best_model_CNN_MaxP.pth
NNs/SmallNet/CNN/No_MaxPool/: CNN_No_MaxP.py  CNN_No_MaxP_Training.py  Testing.py  filter.txt  onnx_transposing.py  output.json
NNs/SmallNet/CNN/No_MaxPool/save_model_CNN_No_MaxP/: best_model_CNN_No_MaxP.onnx  best_model_CNN_No_MaxP.pth
NNs/SmallNet/Data/: data.txt  eigen.cpp  tensor.py
NNs/SmallNet/FNN/: FNN.py  FNNTraining.py
NNs/SmallNet/FNN/save_model_FNN/: best_model_FNN.onnx  best_model_FNN.pth
ext_include/Eigen/: Core  Core_reduced
ext_include/Eigen/src/Core/: GeneralProduct.h
svf/: CMakeLists.txt
svf-llvm/: CMakeLists.txt
svf-llvm/include/SVF-LLVM/: NNgraphBuilder.h
svf-llvm/lib/: NNgraphBuilder.cpp
svf-llvm/tools/AE/: CMakeLists.txt  IntervalZ3Solver.cpp  IntervalZ3Solver.h  ae.cpp
svf-onnx/: 1SVFONNX.cpp  1SVFONNX.h  CMakeLists.txt  CheckModels.cpp  CheckModels.h  IntervalSolver.cpp  IntervalSolver.h  Loaddata.cpp  Loaddata.h  NNLoaddata.cpp  NNLoaddata.h  SVFModel_read.py  SVFONNX.cpp  SVFONNX.h  Solver.cpp  Solver.h  text.txt
svf-onnx/dataset/: best_model_MaxPool2d.onnx
svf/include/AE/Core/: IntervalValue.h
svf/include/AE/Nnexe/: NNgraphIntervalSolver.h  Solver.h
svf/include/Graphs/: 1NNGraph.h  1NNNode.h  NNEdge.h  NNGraph.h  NNNode.h
svf/include/Util/: Options.h
svf/lib/AE/Nnexe/: NNgraphIntervalSolver.cpp  Solver.cpp
svf/lib/Graphs/: 1NNGraph.cpp  NNGraph.cpp
svf/lib/Util/: Options.cpp
